Fix rocky planet descent

--- a/playlists.cfg
+++ b/playlists.cfg
@@ -593,9 +593,8 @@ playlist
 	}
 	playWhen
 	{
-		inAtmosphere = Yes
 		scene = LoadingBuffer | Flight | PSystem
-		situation = FLYING
+		situation = SUB_ORBITAL
 		bodyName = Moho
 	}
 }
@@ -722,9 +721,8 @@ playlist
 	}
 	playWhen
 	{
-		inAtmosphere = Yes
 		scene = LoadingBuffer | Flight | PSystem
-		situation = FLYING
+		situation = SUB_ORBITAL
 		bodyName = Dres
 	}
 }
